@@ -1,11 +1,21 @@
 package com.invoicesync.service;
 
+import static com.invoicesync.specification.XmlSpecification.withUserId;
+
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
+import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
+import com.invoicesync.common.PageResponse;
+import com.invoicesync.dto.XmlFileRequest;
 import com.invoicesync.dto.XmlFileResponseDto;
 import com.invoicesync.module.XmlFile;
 import com.invoicesync.repository.XmlFileRepository;
@@ -18,33 +28,40 @@ public class XmlFileServiceImpl implements XmlFileService {
 
     private final XmlFileRepository xmlFileRepository;
 
-    @Override
-    public XmlFile saveXmlFile(MultipartFile file) throws IOException {
-        // XmlFile xmlFile = new XmlFile();
-        // String filename = file.getOriginalFilename();
-        // String xmlContent = new String(file.getBytes());
-        //
-        // xmlFile.setUser((UserDemo) SecurityContextHolder.getContext().getAuthentication().getPrincipal());
-        // xmlFile.setFile_name(filename);
-        // xmlFile.setXml_content(xmlContent);
-        // xmlFile.setCreated_at(Date.from(new Date().toInstant()));
-        // return xmlFileRepository.save(xmlFile);
+    private final XmlMapper xmlMapper;
 
-        return null;
+    @Override
+    public Long saveXmlFile(final MultipartFile file, final Authentication connectedUser) {
+        try {
+            final String filename = file.getOriginalFilename();
+            final String xmlContent = new String(file.getBytes(), StandardCharsets.UTF_8);
+
+            final XmlFileRequest request = new XmlFileRequest(filename, xmlContent);
+            final XmlFile xmlFile = xmlMapper.toXmlFile(request);
+            return xmlFileRepository.save(xmlFile).getId();
+        } catch (IOException e) {
+            throw new RuntimeException("Nepodarilo sa načítať súbor: " + file.getOriginalFilename(), e);
+        }
     }
 
     @Override
-    public List<XmlFileResponseDto> getXmlFilesByUserId(Long userId) {
-        // return xmlFileRepository.findByUserId(userId)
-        //         .stream()
-        //         .map(xmlFile -> new XmlFileResponseDto(
-        //                 xmlFile.getId(),
-        //                 xmlFile.getFile_name(),
-        //                 xmlFile.getCreated_at()
-        //         ))
-        //         .collect(Collectors.toList());
-        //
-        return null;
+    public PageResponse<XmlFileResponseDto> finalAllXmlImportsByUser(final int page, final int size,
+        final Authentication connectedUser) {
+        final Pageable pageable = PageRequest.of(page, size, Sort.by("createdDate").descending());
+        final Page<XmlFile> xmlFiles = xmlFileRepository.findAll(withUserId(connectedUser.getName()), pageable);
+
+        final List<XmlFileResponseDto> xmlFileResponse = xmlFiles.stream()
+            .map(xmlMapper::toXmlTableResponse)
+            .toList();
+        return new PageResponse<>(
+            xmlFileResponse,
+            xmlFiles.getNumber(),
+            xmlFiles.getSize(),
+            xmlFiles.getTotalElements(),
+            xmlFiles.getTotalPages(),
+            xmlFiles.isFirst(),
+            xmlFiles.isLast()
+        );
     }
 
     @Override
@@ -53,4 +70,5 @@ public class XmlFileServiceImpl implements XmlFileService {
                 .map(XmlFile::getXml_content)
                 .orElseThrow(() -> new IllegalArgumentException("Xml file not found"));
     }
+
 }
